# SmartFood

./: README.md
backend/: Dockerfile  pyproject.toml
backend/database/: fridge.db
backend/src/smart_food/: serve.py
backend/src/smart_food/api/: __init__.py  models.py  routes.py
backend/src/smart_food/barcode_scanner/: __init__.py  barcode_scanner.py  get_product_info.py
backend/src/smart_food/db/: db_scripts.py
backend/src/smart_food/recipe_recommendation/: config.py  response.py
frontend/: .gitkeep
frontend/SmartFood/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
frontend/SmartFood/@types/: react-native-barcodescanner.d.ts
frontend/SmartFood/components/: Recommendations.tsx
frontend/SmartFood/scr/: BarcodeScanner.tsx  Login.tsx  ProductList.tsx
